--- a/results.html
+++ b/results.html
@@ -8,15 +8,17 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <meta name="theme-color" content="#1B1A1B">
+  <meta name="theme-color" content="#282A36">
 </head>
 <body class="page page--fadein">
+
+  <!-- Universal Toast Message -->
+  <div id="toast" class="toast"></div>
 
   <nav class="topbar">
     <div class="container topbar-inner">
       <div class="brand-inline">MinorMap+</div>
       <div class="nav-actions">
-        <!-- "Try Another" button moved to the main content area -->
         <button class="btn btn--ghost ripple logout-btn" type="button">Logout</button>
       </div>
     </div>
@@ -34,7 +36,6 @@
     </section>
 
     <div class="actions-row reveal-anim">
-      <!-- Replaced download button with primary navigation button -->
       <button class="btn btn--primary ripple" id="navHome">Try Another Minor</button>
     </div>
   </main>
