--- a/selectminor.html
+++ b/selectminor.html
@@ -8,9 +8,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <meta name="theme-color" content="#1B1A1B">
+  <meta name="theme-color" content="#282A36">
 </head>
 <body class="page page--fadein">
+
+  <!-- Universal Toast Message -->
+  <div id="toast" class="toast"></div>
 
   <nav class="topbar">
     <div class="container topbar-inner">
@@ -31,12 +34,6 @@
     <!-- Minors will be loaded here by main.js -->
     <section id="minorGrid" class="grid cols-3">
       <!-- Example card (will be populated by JS) -->
-      <!-- 
-      <div class="card minor-card reveal-anim" data-id="cs">
-        <h3>Computer Science</h3>
-        <p>Explore algorithms, data structures, and software development.</p>
-      </div> 
-      -->
     </section>
 
     <div class="actions-row reveal-anim">
