--- a/register.html
+++ b/register.html
@@ -8,9 +8,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <meta name="theme-color" content="#1B1A1B">
+  <meta name="theme-color" content="#282A36">
 </head>
 <body class="page page--fadein">
+
+  <!-- Universal Toast Message -->
+  <div id="toast" class="toast"></div>
 
   <main class="layout container">
     <div class="brand">
