fixed and updated  the authenticatin and api

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -34,9 +34,10 @@
           <label for="emailLogin">Email Address</label>
         </div>
 
-        <div class="field">
+        <div class="field field--with-toggle">
           <input id="passwordLogin" name="password" type="password" placeholder=" " required />
           <label for="passwordLogin">Password</label>
+          <button type="button" class="password-toggle" aria-label="Show password">👁</button>
         </div>
 
         <div class="actions">
