--- a/frontend/register.html
+++ b/frontend/register.html
@@ -32,9 +32,10 @@
         <label for="emailRegister">Email Address</label>
       </div>
 
-      <div class="field">
+      <div class="field field--with-toggle">
         <input id="passwordRegister" name="password" type="password" placeholder=" " required />
         <label for="passwordRegister">Password</label>
+        <button type="button" class="password-toggle" aria-label="Show password">👁</button>
       </div>
 
       <div class="actions">
